# lambda

./: .gitignore  ChangeLog  INSTALL.md  README.md  README.rst
.github/workflows/: ubuntu_18_04.yml  ubuntu_20_04.yml
doc/: lambda-manual.md
lambda_ros/: CMakeLists.txt  package.xml
lambda_ros/cfg/: Lambda.cfg
lambda_ros/config/: lambda.perspective
lambda_ros/include/lambda_ros/: lambda.h  ocl.hpp  ocl_lambda.hpp
lambda_ros/launch/: lambda.launch
lambda_ros/msg/: AudioSource.msg
lambda_ros/scripts/: ramp.py  sine.py  triangle.py
lambda_ros/src/: array_test.cpp  lambda.cpp  lambda_ros.cpp  ocl_lambda.cpp
src/: lambda.cpp  lambda.h  lambda.pro
